testsuite/tests/effects-disallowed/when_test.compilers.reference

# * *     effect E : unit
#           Characters 76-77:
     | effect E k when (continue k (); false) -> assert false
                                 ^
Error: Unbound value k
# 
